--- a/cli-env-deps.html.md.erb
+++ b/cli-env-deps.html.md.erb
@@ -4,7 +4,7 @@ title: CLI `create-env` Dependencies
 
 <p class="note">Note: Applies to CLI v2.</p>
 
-The `bosh create-env` (and `bosh delete-env`) command has dependencies (similar to `bosh-init`).
+The `bosh create-env` (and `bosh delete-env`) command has dependencies.
 
 1. Depending on your platform install following packages:
 
