--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,10 @@
 title: Recent Additions and Updates
 ---
 
+Removed referenced to `bosh-init`
+
+---
+
 * [Configs](configs.html)
 * VM Resources on [instance groups](manifest-v2.html#instance-groups)
 * [Job Templates](job-templates.html)
