--- a/terminology.html.md.erb
+++ b/terminology.html.md.erb
@@ -19,7 +19,7 @@ A process that runs continuously on each VM that BOSH deploys (one Agent process
 ---
 ## <a id="bosh-init"></a> bosh-init
 
-bosh-init is tool used for creating and updating the Director (its VM and persistent disk) in an environment. It is superseded by CLI v2's `bosh create-env` and `bosh delete-env` commands.
+Tool that was replace by CLI v2's `create-env` command used for creating and updating.
 
 ---
 ## <a id="bosh-lite"></a> BOSH Lite
