--- a/build-cpi.html.md.erb
+++ b/build-cpi.html.md.erb
@@ -8,7 +8,7 @@ This topic describes how to build a CPI.
 
 CPIs are distributed as regular releases, typically with a release job called `cpi` and a few packages that provide compilation/runtime environment for that job if necessary (e.g. [bosh-aws-cpi-release](https://github.com/cloudfoundry-incubator/bosh-aws-cpi-release) includes Ruby and [bosh-warden-cpi-release](https://github.com/cppforlife/bosh-warden-cpi-release) includes golang). To qualify to be a CPI release, it must include a release job that has `bin/cpi` executable.
 
-Both bosh-init and the Director expect to be configured with a CPI release to function properly. In the case of bosh-init, specified CPI release is unpacked and installed on the machine running bosh-init. For the Director, CPI release job is colocated on the same VM, so that the director release job can access it.
+Both `bosh create-env` command and the Director expect to be configured with a CPI release to function properly. In the case of `bosh create-env` command, specified CPI release is unpacked and installed on the machine running the command. For the Director, CPI release job is colocated on the same VM, so that the director release job can access it.
 
 CPIs written in Ruby:
 
@@ -110,7 +110,9 @@ Most CPIs have to deal with IaaS APIs that rate limit (e.g. OpenStack, AWS APIs)
 ---
 ## <a id="debugging"></a> Debugging
 
-It usually useful to get a detailed log of CPI requests and responses from the callee. To get a full debug log from bosh-init set `BOSH_INIT_LOG_LEVEL=debug` environment variable. When working with the Director you can find similar debug logs via `bosh task X --debug` command.
+It usually useful to get a detailed log of CPI requests and responses from the callee. To get a full debug log from `bosh create-env` command set `BOSH_LOG_LEVEL=debug` environment variable.
+
+When working with the Director you can find similar debug logs via `bosh task X --debug` command.
 
 ---
 Next: [CPI API v1](cpi-api-v1.html)
