--- a/openstack-light-stemcells.html.md.erb
+++ b/openstack-light-stemcells.html.md.erb
@@ -14,7 +14,7 @@ You can create your own OpenStack light stemcells to re-use stemcell images alre
     $ ./create_light_stemcell --os ubuntu-trusty --version 3312 --image-id 1234-567-890
     ```
 
-You can use the light stemcell archive like a regular stemcell archive in BOSH deployment manifests and with bosh-init.
+You can use the light stemcell archive like a regular stemcell archive in BOSH deployment manifests and with `bosh create-env` command.
 
 ---
 [Back to Table of Contents](index.html#cpi-config)
