Manifest addons became available in v262

--- a/manifest-v2.html.md.erb
+++ b/manifest-v2.html.md.erb
@@ -209,6 +209,8 @@ instance_groups:
 ---
 ## <a id='addons'></a> Addons Block
 
+<p class="note">Note: This feature is available with bosh-release v262+.</p>
+
 **addons** [Array, required]: Specifies the [addons](./terminology.html#addon) to be applied to this deployments.
 
 See [Addons Block](runtime-config.html#addons) for the schema.
