Add auto-anti-affinity for OpenStack

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -107,6 +107,7 @@ See [Recent Additions and Updates](recent.html).
 * [Azure](azure-cpi.html)
     * [Creating resources](azure-resources.html)
 * [OpenStack](openstack-cpi.html)
+    * [Using Auto-anti-affinity](openstack-auto-anti-affinity.html)
     * [Using Keystone v2 API](openstack-keystonev2.html)
     * [Using nova-networking](openstack-nova-networking.html)
     * [Extended Registry configuration](openstack-registry.html)
