--- a/openstack-keystonev2.html.md.erb
+++ b/openstack-keystonev2.html.md.erb
@@ -30,4 +30,4 @@ Default configuration typically uses Keystone v3 API. This document describes ho
 
 Next: [Using nova-networking](openstack-nova-networking.html)
 
-Previous: [OpenStack](openstack-cpi.html)
+Previous: [Using Auto-anti-affinity](openstack-auto-anti-affinity.html)
