How to delete orphaned disks manually

--- a/persistent-disks.html.md.erb
+++ b/persistent-disks.html.md.erb
@@ -129,7 +129,7 @@ For example, to re-attach the disk:
 
 <p class="note">Note: `attach-disk` command can also attach available disks found in the IaaS. They don't have to be listed in the orphaned disks list.</p>
 
-Orphaned disks are deleted after [5 days by default](https://bosh.io/jobs/director?source=github.com/cloudfoundry/bosh#p=director.disks).
+Orphaned disks are deleted after [5 days by default](https://bosh.io/jobs/director?source=github.com/cloudfoundry/bosh#p=director.disks). You can decide to clean up orphaned disks manually with `bosh clean-up --all` or one-by-one with `bosh delete-disk`.
 
 ---
 [Back to Table of Contents](index.html#deployment-config)
