--- a/build-stemcell.html.md.erb
+++ b/build-stemcell.html.md.erb
@@ -20,19 +20,25 @@ In the future, BOSH team will investigate how to best consolidate stemcells into
 ---
 ## <a id="tarball-structure"></a> Tarball Structure
 
+<p class="note">Note that tarball structure is subject to change without notice.</p>
+
 <pre class="terminal">
 $ tar tvf light-bosh-stemcell-3033-aws-xen-hvm-ubuntu-trusty-go_agent.tgz
 
 -rw-rw-r--  0 ubuntu ubuntu      0 Aug  4 09:45 image
 -rw-rw-r--  0 ubuntu ubuntu    710 Aug  4 10:06 stemcell.MF
--rw-r--r--  0 ubuntu ubuntu  50594 Aug  4 09:23 stemcell_dpkg_l.txt
+-rw-r--r--  0 ubuntu ubuntu  50594 Aug  4 09:23 packages.txt
+-rw-r--r--  0 ubuntu ubuntu  12543 Aug  4 09:22 dev_tools_file_list.txt
 </pre>
 
 * `image`: OS image in a format (raw, qcow, ova, etc.) understood by the CPI/IaaS.
 * `stemcell.MF`: YAML file with stemcell metadata.
-* `stemcell_dpkg_l.txt`: Text file that includes list of packages installed on Ubuntu Trusty stemcells.
+* `packages.txt`: Text file that includes list of packages installed. (Used to be included as `stemcell_dpkg_l.txt`)
+* `dev_tools_file_list.txt`: Text file that includes list of files removed by the agent if Agent's `remove_dev_tools` feature is enabled.
 
 ### <a id="metadata"></a> Metadata
+
+<p class="note">Note that content of `stemcell.MF` is subject to change without notice.</p>
 
 * **name** [String, required]: A unique name used to identify stemcell series.
 * **operating_system** [String, required]: Operating system in the stemcell. Example: `ubuntu-trusty`.
