--- a/openstack-light-stemcells.html.md.erb
+++ b/openstack-light-stemcells.html.md.erb
@@ -13,11 +13,11 @@ You can create your own OpenStack light stemcells to re-use stemcell images alre
 1. Use `bosh repack-stemcell` to create a light stemcell archive from a heavy stemcell
 
     ```
-    $ STEMCELL_VERSION=<Stemcell version> bosh repack-stemcell --version "${STEMCELL_VERSION}" \
+    $ bosh repack-stemcell --version "<Stemcell version>" \
    --empty-image \
    --format openstack-light \
    --cloud-properties="{\"image_id\": \"<Stemcell UUID>\"}" \
-   heavy-stemcell.tgz ./light-bosh-stemcell-${STEMCELL_VERSION}-openstack-kvm-ubuntu-trusty-go_agent.tgz
+   heavy-stemcell.tgz ./light-bosh-stemcell-<Stemcell version>-openstack-kvm-ubuntu-trusty-go_agent.tgz
     ```
 
 You can use the light stemcell archive like a regular stemcell archive in BOSH deployment manifests and with `bosh create-env` command.
