--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -62,7 +62,7 @@ See [Environments](cli-envs.html).
 
 - <a id="create-env"></a> `bosh create-env manifest.yml [--state path] [-v ...] [-o ...] [--vars-store path]`
 
-    Creates single VM based on the manifest. Typically used to create a Director environment. Operation files and variables can be provided to adjust and fill in manifest before doing a deploy.
+    Creates single VM based on the manifest. Typically used to create a Director environment. [Operation files](https://bosh.io/docs/cli-ops-files.html) and [variables](https://bosh.io/docs/cli-int.html) can be provided to adjust and fill in manifest before doing a deploy.
 
     `create-env` command replaces `bosh-init deploy` CLI command.
 
