--- a/cli-tunnel.html.md.erb
+++ b/cli-tunnel.html.md.erb
@@ -13,16 +13,19 @@ Common use cases for tunneling through a jumpbox VM include:
 
 <pre class="terminal">
 # set a tunnel
-# -D : local SOCKS port
-# -f : forks the process in the background
-# -C : compresses data before sending
-# -N : tells SSH that no command will be sent once the tunnel is up
-# -4 : force SSH to use IPv4 to avoid the dreaded `bind: Cannot assign requested address` error
-$ ssh -4 -D 5000 -fNC jumpbox@jumpbox-ip -i jumpbox.key
+$ ssh -4 -D 12345 -fNC jumpbox@jumpbox-ip -i jumpbox.key
 
 # let CLI know via environment variable
-$ export BOSH_ALL_PROXY=socks5://localhost:5000
+$ export BOSH_ALL_PROXY=socks5://localhost:12345
 
 $ bosh create-env bosh-deployment/bosh.yml ...
 $ bosh alias-env aws -e director-ip --ca-cert ...
 </pre>
+
+SSH options:
+
+- `-D` : local SOCKS port; make sure port is not already in use by a different tunnel/process
+- `-f` : forks the process in the background
+- `-C` : compresses data before sending
+- `-N` : tells SSH that no command will be sent once the tunnel is up
+- `-4` : force SSH to use IPv4 to avoid the dreaded `bind: Cannot assign requested address` error
