--- a/deploying-step-by-step.html.md.erb
+++ b/deploying-step-by-step.html.md.erb
@@ -46,7 +46,7 @@ The Director will do the following [steps](https://www.youtube.com/watch?v=ay6Gj
     Even if only one job or package changed in the instance group, stopping and starting procedure will apply to all of the jobs on the instances in that group. One of the future enhancements is to make this procedure more surgical and only affect jobs that have changed.
 
     1. Check if the instance previously existed
-        - if no, select a VM and assign assign it to be this instance
+        - if no, select a VM and assign it to be this instance
         - if yes, check to see what has changed since last time it was updated
 
     1. Download updated jobs and packages onto the VM
