--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -14,7 +14,7 @@ To update runtime config on the Director use [`bosh update runtime-config`](sysa
 <p class="note">Note: See <a href="#example">example runtime config</a> below.</p>
 
 <pre class="terminal">
-$ bosh update runtime-config runtime.yml
+$ bosh update-runtime-config runtime.yml
 
 $ bosh runtime-config
 Acting as user 'admin' on 'micro'
