--- a/init-google.html.md.erb
+++ b/init-google.html.md.erb
@@ -26,7 +26,7 @@ This document shows how to initialize new [environment](terminology.html#environ
         -v internal_ip=10.0.0.6 \
         --var-file gcp_credentials_json=~/Downloads/gcp-23r82r3y2.json \
         -v project_id=moonlight-2389ry3 \
-        -v zone=us-east-1 \
+        -v zone=us-east1-c \
         -v tags=[internal] \
         -v network=default \
         -v subnetwork=default
