Use instance_groups instead jobs

--- a/azs.html.md.erb
+++ b/azs.html.md.erb
@@ -48,14 +48,14 @@ AZs schema:
 ---
 ## <a id='assigning-azs'></a> Assigning AZs to deployment instance groups
 
-Once AZs are defined, deployment jobs can be placed into one or more AZs:
+Once AZs are defined, deployment instance_groups can be placed into one or more AZs:
 
 ```yaml
-jobs:
+instance_groups:
 - name: web
   instances: 5
   azs: [z1, z2]
-  templates:
+  jobs:
   - name: web
   networks:
   - name: private
