--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -42,11 +42,11 @@ See [Recent Additions and Updates](recent.html).
     * Run one-off tasks
     * Update deployment
 
-### <a id="cli-v2"></a> CLI v2
+### <a id="cli-v2"></a> CLI v2+
 
 * [Command reference](cli-v2.html)
     * [`create-env` Dependencies](cli-env-deps.html)
-    * [Differences between CLI v2 vs v1](cli-v2-diff.html)
+    * [Differences between CLI v2+ vs v1](cli-v2-diff.html)
     * [Global Flags](cli-global-flags.html)
     * [Environments](cli-envs.html)
     * [Operations files](cli-ops-files.html)
