--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -96,7 +96,7 @@ See [Recent Additions and Updates](recent.html).
       * [Common addons](addons-common.html)
   * [CPI config](cpi-config.html)
 * [Trusted certificates](trusted-certs.html)
-* [Native DNS Support](dns.html) [alpha]
+* [Native DNS Support](dns.html)
 
 ### <a id="cpi-config"></a> Detailed CPI configuration & troubleshooting
 
