--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -13,7 +13,7 @@ Removed referenced to `bosh-init`
 ---
 
 * [Package vendoring](package-vendoring.html)
-* [Native DNS Support](dns.html) [alpha]
+* [Native DNS Support](dns.html)
 
 ---
 
