Use bosh-lite as director name

--- a/bosh-lite.html.md.erb
+++ b/bosh-lite.html.md.erb
@@ -49,7 +49,7 @@ Follow below steps to get it running on locally on VirtualBox:
       -o ~/workspace/bosh-deployment/bosh-lite-runc.yml \
       -o ~/workspace/bosh-deployment/jumpbox-user.yml \
       --vars-store ./creds.yml \
-      -v director_name="bosh-1" \
+      -v director_name="bosh-lite" \
       -v internal_ip=192.168.50.6 \
       -v internal_gw=192.168.50.1 \
       -v internal_cidr=192.168.50.0/24 \
