--- a/theme/partials/nav-item.html
+++ b/theme/partials/nav-item.html
@@ -96,10 +96,11 @@
 
 {#<!-- Pseudo-section -->#}
 {% elif nav_item.title[0:4] == "--- " %}
-
-  <li class="{{ class }}">
-    <label class="md-nav__title"><br>{{ nav_item.title[4:] }}</label>
-  </li>
+  {% if level != 1 %}{# 1 = mobile-friendly nav where this does not make sense to show #}
+    <li class="{{ class }}">
+      <label class="md-nav__title"><br>{{ nav_item.title[4:] }}</label>
+    </li>
+  {% endif %}
 
 {#<!-- Main navigation item -->#}
 {% else %}
